install font-awesome-sass

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
     .menu
       .menu__user-name
         %h3 naaya
+        %i(class="fa fa-pencil-square-o" aria-hidden="true")
       .menu__chat-groups
         %h2 sample
         %p sample
