add font-awesome icons

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,16 @@
     .menu
       .menu__user-name
         %h3 naaya
-        %i(class="fa fa-pencil-square-o" aria-hidden="true")
+        = link_to do
+          %i.fa.fa-pencil-square-o
+        = link_to do
+          %i.fa.fa-cog
+      .menu__chat-groups
+        %h2 sample
+        %p sample
+      .menu__chat-groups
+        %h2 sample
+        %p sample
       .menu__chat-groups
         %h2 sample
         %p sample
