--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -6,7 +6,24 @@
   .chat-box
     %h3 naayasaito
     %p 2017/03/07 19:53:07
-    %h4 message
+    %h4 hello
+  .chat-box
+    %h3 naayasaito
+    %p 2017/03/08 19:53:07
+    %h4 good morning
+  .chat-box
+    %h3 naayasaito
+    %p 2017/03/09 19:53:07
+    %h4 good evening
+  .chat-box
+    %h3 naayasaito
+    %p 2017/03/01 19:53:07
+    %h4 bye
+  .chat-box
+    %h3 naayasaito
+    %p 2017/03/02 19:53:07
+    %h4 good night
 .chat-view__form
   %input(type = 'text' name = 'message' placeholder = 'type a message')
+%i.fa.fa-picture-o
   = button_tag 'submit', :class => "submit-button"
