set style to application.html.haml

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,10 +7,10 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    %header
+    %header チャットグループが作成されました。
     .menu
       .menu__user-name
-        %h3 naaya
+        %h3 Naaya
         = link_to do
           %i.fa.fa-pencil-square-o
         = link_to do
