--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,43 @@
 @import "./reset";
 @import "font-awesome";
+@import "top";
+
+html, body {
+  height: 100%;
+}
+
+header{
+  background-color: #38AEF0;
+  color: #FFFFFF;
+  text-align: center;
+}
+
+.menu{
+  float:left;
+  width:300px;
+  height:100%;
+  background-color: #2f3e51;
+  color: #FFFFFF;
+  a:visited {
+   color: #FFFFFF; 
+ }
+  &__user-name{
+    background-color: #253141;
+    padding:35px 20px;
+    vertical-align: middle;
+    h3{
+      font-size:16px;
+      font-weight: bold;
+    }
+  }
+  &__chat-groups{
+    padding:20px 20px;
+    h2{
+      font-size:15px;
+      padding-bottom: 5px
+    }
+    p{
+      font-size:11px;
+    }
+  }
+}
