--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -2,7 +2,6 @@
   %h2 Sample
   %p Members: naya
   = link_to 'edit', :class => "edit-button"
-  %hr
 .chat-view__history
   .chat-box
     %h3 naayasaito
@@ -26,5 +25,5 @@
     %h4 good night
 .chat-view__form
   %input(type = 'text' name = 'message' placeholder = 'type a message')
-  %i.fa.fa-picture-o
-  = button_tag 'submit', :class => "submit-button"
+    %i.fa.fa-picture-o
+  = button_tag 'Send', :class => "submit-button"
