--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,7 +1,7 @@
 .chat-view__group-details
   %h2 Sample
+  = link_to 'Edit', :class => "edit-button"
   %p Members: naya
-  = link_to 'edit', :class => "edit-button"
 .chat-view__history
   .chat-box
     %h3 naayasaito
@@ -20,10 +20,22 @@
     %p 2017/03/01 19:53:07
     %h4 bye
   .chat-box
+    %h3 naayasaitos
+    %p 2017/03/02 19:53:07
+    %h4 good night
+    .chat-box
     %h3 naayasaito
+    %p 2017/03/01 19:53:07
+    %h4 bye
+  .chat-box
+    %h3 naayasaitos
     %p 2017/03/02 19:53:07
     %h4 good night
 .chat-view__form
-  %input(type = 'text' name = 'message' placeholder = 'type a message')
-    %i.fa.fa-picture-o
-  = button_tag 'Send', :class => "submit-button"
+  %ul
+    %li
+      %input(type = 'text' name = 'message' placeholder = 'type a message')
+    %li
+      %i.fa.fa-picture-o
+    %li
+      = button_tag 'Send', :class => "send-button"
