--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -124,3 +124,12 @@
     }
     /* YUI CSS Detection Stamp */
     #yui3-css-stamp.cssreset { display: none; }
+
+    button{
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        padding: 0;
+        appearance: none;
+        }
