--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,3 +1,98 @@
-// Place all the styles related to the top controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.chat-view__group-details{
+    background-color: #FFFFFF;
+    padding: 35px 40px 0;
+    border-bottom-style: solid; 
+    border-bottom-color: #eeeeee;
+    overflow: hidden;
+    &:after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+    h2{
+      float: left;
+      font-size: 20px;
+      color:#333333;
+      padding-bottom: 15px;
+    }
+    p{
+      clear: both;
+      font-size: 12px;
+      color: #999999;
+    }
+    a {
+    float: right;
+    display:block;
+    border-color: #38AEF0;
+    border-style: solid;
+    color: #38AEF0;
+    text-align: center;
+    line-height: 40px;
+    width:50px;
+    padding:0 20px;
+    text-decoration: none;
+   }
+}
+
+.chat-view__history{
+  padding:46px 40px 0;
+  background-color: #FAFAFA;
+  height: 100%;
+  overflow:scroll;
+  .chat-box{
+    h3{
+    color:#434A54;
+    font-size: 16px;
+    font-weight: bold;
+    float: left;
+    padding-right: 10px;
+    }
+    p{
+      font-size: 12px;
+      float:left;
+      color: #999999
+    }
+    h4{
+      clear: both;
+      font-size: 14px;
+      padding-top: 10px;
+      padding-bottom: 40px;
+    }
+  }
+}
+
+.chat-view__form{
+  overflow:hidden;
+margin-left: 300px;
+position:fixed;
+width:100%;
+bottom:0;
+left:0px;
+z-index:1;
+padding: 20px 50px;
+background-color: #DDDDDD;
+&:after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+input{
+  float: left;
+  height:50px;
+  border-style: none;
+  /*width:100;*/
+}
+i{
+  float: left;
+  margin-right: 10px;
+}
+.send-button{
+  background-color: #38AEF0;
+  color: #FFFFFF;
+  text-align: center;
+  height: 50px;
+  padding:0 20px;
+  margin-left: 15px;
+}
+
+}
