--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "./reset";
 @import "font-awesome";
 @import "top";
+@import "./clearfix";
 
 html, body{
   height:100%;
@@ -23,11 +24,7 @@ header{
   color: #FFFFFF;
   overflow:hidden;
   z-index: 2;
-  &:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
+  @include clearfix();
   a:visited {
    color: #FFFFFF;
  }
@@ -35,11 +32,7 @@ header{
     background-color: #253141;
     padding:35px 20px;
     vertical-align: middle;
-    &:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
+    @include clearfix();
     h3{
       font-size:16px;
       font-weight: bold;
@@ -47,6 +40,7 @@ header{
     }
     a{
       float:right;
+      color: #FFFFFF;
     }
   }
   &__chat-groups{
