--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,14 +1,11 @@
+@import "./clearfix";
 .chat-view__group-details{
     background-color: #FFFFFF;
     padding: 35px 40px 0;
     border-bottom-style: solid; 
     border-bottom-color: #eeeeee;
     overflow: hidden;
-    &:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
+ @include clearfix();
     h2{
       float: left;
       font-size: 20px;
@@ -39,6 +36,7 @@
   background-color: #FAFAFA;
   height: 100%;
   overflow:scroll;
+  @include clearfix();
   .chat-box{
     h3{
     color:#434A54;
@@ -70,21 +68,18 @@ bottom:0;
 left:0px;
 z-index:1;
 padding: 20px 50px;
+@include clearfix();
 background-color: #DDDDDD;
-&:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
+
 input{
   float: left;
   height:50px;
   border-style: none;
-  /*width:100;*/
 }
 i{
   float: left;
   margin-right: 10px;
+  color:#434A54;
 }
 .send-button{
   background-color: #38AEF0;
@@ -93,6 +88,7 @@ i{
   height: 50px;
   padding:0 20px;
   margin-left: 15px;
+  font-size: 16px;
 }
 
 }
