--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,7 @@
 html, body{
   height:100%;
   width:100%;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 header{
@@ -22,12 +22,12 @@ header{
   height:100%;
   background-color: #2f3e51;
   color: #FFFFFF;
-  overflow:hidden;
-  z-index: 2;
   @include clearfix();
+
   a:visited {
    color: #FFFFFF;
  }
+
   &__user-name{
     background-color: #253141;
     padding:35px 20px;
@@ -55,7 +55,8 @@ header{
   }
 }
 .chat-view{
+  height: 100vh;
   margin-left: 300px;
-  overflow:hidden;
-  /*height: 100%;*/
+  width:calc(100vw - 300px);
+  /*overflow: hidden;*/
 }
