--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,7 +1,8 @@
+
 .chat-view__group-details{
     background-color: #FFFFFF;
     padding: 35px 40px 0;
-    border-bottom-style: solid; 
+    border-bottom-style: solid;
     border-bottom-color: #eeeeee;
     overflow: hidden;
     h2{
@@ -30,10 +31,9 @@
 }
 
 .chat-view__history{
-  height: calc(100vh - 90px - 82px);
+  height: calc(100vh - 102px - 140px);
   padding:46px 40px 0;
   background-color: #FAFAFA;
-  /*width:100%;*/
   overflow:scroll;
   .chat-box{
     h3{
@@ -59,26 +59,32 @@
 
 .chat-view__form{
 overflow:hidden;
-padding: 20px 50px;
+padding: 20px 0;
 background-color: #DDDDDD;
-
+margin-bottom: -50px;
 input{
+  padding:0 20px;
   float: left;
   height:50px;
   border-style: none;
+  width:calc(100% - 40px);
 }
 i{
-  float: left;
   margin-right: 10px;
   color:#434A54;
+  position:relative;
+  bottom:50px;
 }
 .send-button{
+  position:relative;
+  bottom:50px;
   background-color: #38AEF0;
   color: #FFFFFF;
   text-align: center;
   height: 50px;
   padding:0 20px;
   margin-left: 15px;
+  margin-right: 20px;
   font-size: 16px;
   float:right;
 }
