--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,12 +3,6 @@
 @import "top";
 @import "./clearfix";
 
-html, body{
-  height:100%;
-  width:100%;
-  /*overflow: hidden;*/
-}
-
 header{
   background-color: #38AEF0;
   color: #FFFFFF;
@@ -19,7 +13,7 @@ header{
 .menu{
   float:left;
   width:300px;
-  height:100%;
+  height:100vh;
   background-color: #2f3e51;
   color: #FFFFFF;
   @include clearfix();
@@ -57,6 +51,4 @@ header{
 .chat-view{
   height: 100vh;
   margin-left: 300px;
-  width:calc(100vw - 300px);
-  /*overflow: hidden;*/
 }
