--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,6 +1,6 @@
 .chat-view__group-details
   %h2 Sample
-  = link_to 'Edit', :class => "edit-button"
+  = link_to 'Edit', class: "edit-button"
   %p Members: naya
 .chat-view__history
   .chat-box
@@ -33,5 +33,5 @@
     %h4 good night
 .chat-view__form
   %input(type = 'text' name = 'message' placeholder = 'type a message')
-  = button_tag 'Send', :class => "send-button"
+  = button_tag 'Send', class: "send-button"
   %i.fa.fa-picture-o
