ビュー整えた

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,7 @@ header{
     background-color: #253141;
     padding:35px 20px;
     vertical-align: middle;
+    height:36px;
     @include clearfix();
     h3{
       font-size:16px;
@@ -35,6 +36,8 @@ header{
     a{
       float:right;
       color: #FFFFFF;
+      padding-left: 5px;
+      font-size: 16px;
     }
   }
   &__chat-groups{
