--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -15,6 +15,7 @@
       clear: both;
       font-size: 12px;
       color: #999999;
+      padding-bottom: 5px;
     }
     a {
     float: right;
@@ -63,11 +64,12 @@ padding: 20px 0;
 background-color: #DDDDDD;
 margin-bottom: -50px;
 input{
-  padding:0 20px;
+  padding-left:20px;
   float: left;
   height:50px;
   border-style: none;
-  width:calc(100% - 40px);
+  width:calc(100% - 60px);
+  margin-left:20px;
 }
 i{
   float: right;
