--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -3,7 +3,7 @@
   .menu__user-name
     %h3
       = current_user.name
-    = link_to do
+    = link_to edit_user_registration_path do
       %i.fa.fa-cog
     = link_to do
       %i.fa.fa-pencil-square-o
