--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -2,7 +2,7 @@
 .menu
   .menu__user-name
     %h3
-      = current_user.name
+      sample
     = link_to edit_user_registration_path do
       %i.fa.fa-cog
     = link_to do
