--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -1,3 +1,5 @@
+@import "./clearfix";
+
 .chat-group-form {
   width: 980px;
   margin: 60px auto;
@@ -41,7 +43,7 @@
 
   .chat-group-form__field {
     margin-top: 30px;
-
+    @include clearfix();
     .chat-group-form__field--left {
       float: left;
       width: 30%;
@@ -53,6 +55,9 @@
     .chat-group-form__field--right {
       float: right;
       width: 70%;
+    }
+    .chat-group-form__search{
+      @include clearfix();
     }
 
     .chat-group-form__label {
@@ -76,6 +81,7 @@
     line-height: 50px;
     font-size: 14px;
     border-bottom: 1px solid #ddd;
+    @include clearfix();
 
     .chat-group-user__name {
       float: left;
