set routing for group

--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -5,7 +5,7 @@
       sample
     = link_to edit_user_registration_path do
       %i.fa.fa-cog
-    = link_to do
+    = link_to new_group_path do
       %i.fa.fa-pencil-square-o
   .menu__chat-groups
     %h2 sample
