--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -2,7 +2,8 @@
 .menu
   .menu__user-name
     %h3
-      sample
+      -if user_signed_in?
+        =current_user.name
     = link_to edit_user_registration_path do
       %i.fa.fa-cog
     = link_to new_group_path do
