--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,6 +1,6 @@
 .chat-group-form
   %h1 新規チャットグループ
-  %form#new_chat_group.new_chat_group{accept:{charset: "UTF-8"}, action: "/chat_groups", method: "post"}
+  %form#new_chat_group.new_chat_group{accept:{charset: "UTF-8"}, action: "/groups", method: "post"}
     %input{name: "utf8", type: "hidden", value: "✓"}
     %input{name: "authenticity_token", type: "hidden", value: "AxFKlYEhD6eqX1PiZoTYQDANtKvgcFSXZQXHt5hyTl55/U/CHC5rtPavrcu2za65riz4tekZEy56vP6kEb2wYA=="}
     .chat-group-form__field
@@ -13,9 +13,8 @@
         %label.chat-group-form__label{for: "chat_group_チャットメンバーを追加"} チャットメンバーを追加
       .chat-group-form__field--right
         .chat-group-form__search
-          = form_for @group do |f|
-            = f.collection_check_boxes(:user_ids, User.all, :id, :name) do |b|
-              = b.label { b.check_box + b.text }
+          = collection_check_boxes(:group,:user_ids, User.all, :id, :name) do |b|
+            = b.label { b.check_box + b.text }
           / %input#user-search-field.chat-group-form__input{placeholder: "追加したいユーザー名を入力してください", type: "text"}
         #user-search-result
     .chat-group-form__field
@@ -25,7 +24,7 @@
         #chat-group-users
           #chat-group-user-22.chat-group-user
             %input{name: "chat_group[user_ids][]", type: "hidden", value: "22"}
-            %p.chat-group-user__name seo_kyohei
+            %p.chat-group-user__name
     .chat-group-form__field
       .chat-group-form__field--left
       .chat-group-form__field--right
