move top view files to message files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "./reset";
 @import "font-awesome";
-@import "top";
+@import "messages";
+@import "group";
 @import "./clearfix";
 @import "./user";
 @import "./group";
