--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -1,5 +1,55 @@
 @import "./clearfix";
 
+/*index*/
+
+.menu{
+  float:left;
+  width:300px;
+  height:100vh;
+  background-color: #2f3e51;
+  color: #FFFFFF;
+  @include clearfix();
+
+  a:visited {
+   color: #FFFFFF;
+ }
+
+  &__user-name{
+    background-color: #253141;
+    padding:35px 20px;
+    vertical-align: middle;
+    height:36px;
+    @include clearfix();
+    h3{
+      font-size:16px;
+      font-weight: bold;
+      float:left;
+    }
+    a{
+      float:right;
+      color: #FFFFFF;
+      padding-left: 5px;
+      font-size: 16px;
+    }
+  }
+  &__chat-groups{
+    padding:20px 20px;
+    h2{
+      font-size:15px;
+      padding-bottom: 5px
+    }
+    p{
+      font-size:11px;
+    }
+  }
+}
+.chat-view{
+  height: 100vh;
+  margin-left: 300px;
+}
+
+/*new*/
+
 .chat-group-form {
   width: 980px;
   margin: 60px auto;
@@ -82,7 +132,6 @@
     font-size: 14px;
     border-bottom: 1px solid #ddd;
     @include clearfix();
-
     .chat-group-user__name {
       float: left;
     }
