--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -34,9 +34,25 @@
   }
   &__chat-groups{
     padding:20px 20px;
+    position:relative;
     h2{
       font-size:15px;
-      padding-bottom: 5px
+      padding-bottom:5px;
+    }
+    a{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-indent:-999px;
+    }
+
+    a:hover{
+    background-color:#FFF;
+    filter:alpha(opacity=5);
+    -moz-opacity: 0.05;
+    opacity: 0.05;
     }
     p{
       font-size:11px;
@@ -158,4 +174,105 @@
     background-color: #38aef0;
     border: 0;
   }
+}
+
+.chat-view{
+  background-color: #FAFAFA;
+}
+
+
+.chat-view__group-details{
+    background-color: #FFFFFF;
+    padding: 35px 40px 0;
+    border-bottom-style: solid;
+    border-bottom-color: #eeeeee;
+    overflow: hidden;
+    h2{
+      float: left;
+      font-size: 20px;
+      color:#333333;
+      padding-bottom: 15px;
+    }
+    p{
+      clear: both;
+      font-size: 12px;
+      color: #999999;
+      padding-bottom: 5px;
+    }
+    a {
+    float: right;
+    display:block;
+    border-color: #38AEF0;
+    border-style: solid;
+    color: #38AEF0;
+    text-align: center;
+    line-height: 40px;
+    width:50px;
+    padding:0 20px;
+    text-decoration: none;
+   }
+}
+
+.chat-view__history{
+  height: calc(100vh - 102px - 140px);
+  padding:46px 40px 0;
+  background-color: #FAFAFA;
+  overflow:scroll;
+  .chat-box{
+    h3{
+    color:#434A54;
+    font-size: 16px;
+    font-weight: bold;
+    float: left;
+    padding-right: 10px;
+    }
+    p{
+      font-size: 12px;
+      float:left;
+      color: #999999
+    }
+    h4{
+      clear: both;
+      font-size: 14px;
+      padding-top: 10px;
+      padding-bottom: 40px;
+    }
+  }
+}
+
+.chat-view__form{
+overflow:hidden;
+padding: 20px 0;
+background-color: #DDDDDD;
+margin-bottom: -50px;
+input{
+  padding-left:20px;
+  float: left;
+  height:50px;
+  border-style: none;
+  width:calc(100% - 100px);
+  margin-left:40px;
+}
+i{
+  float: right;
+  margin-right: 10px;
+  color:#434A54;
+  position:relative;
+  bottom:37.5px;
+  /*right: calc(78.5px + 17.16px);*/
+}
+.send-button{
+  position:relative;
+  bottom:50px;
+  background-color: #38AEF0;
+  color: #FFFFFF;
+  text-align: center;
+  height: 50px;
+  padding:0 20px;
+  margin-left: 15px;
+  margin-right: 40px;
+  font-size: 16px;
+  float:right;
+}
+
 }
