--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -15,7 +15,7 @@
     = link_to 'Edit', class: "edit-button"
     %p Members: naya
   .chat-view__history
-    = render partial: 'message', collection: @messages
+    = render @messages
   .chat-view__form
     =form_for ([@group, @message]) do|f|
       =f.text_field :body, name:'body', placeholder: 'type a message', type: 'text', class:'message-text-field'
