Change group render notation

--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -7,7 +7,7 @@
       %i.fa.fa-cog
     = link_to new_group_path do
       %i.fa.fa-pencil-square-o
-  = render partial: 'group', collection: @groups
+  = render @groups
 .chat-view
   .chat-view__group-details
     %h2
