--- a/app/views/groups/_group.html.haml
+++ b/app/views/groups/_group.html.haml
@@ -1,5 +1,5 @@
 .menu__chat-groups
   %h2
     =group.name
-  = link_to '', group_path(id: group.id)
+  = link_to '', group_messages_path(group_id: group.id)
   %p messages
