--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -18,6 +18,6 @@
     = render @messages
   .chat-view__form
     =form_for ([@group, @message]) do|f|
-      =f.text_field :body, name:'body', placeholder: 'type a message', type: 'text', class:'message-text-field'
+      =f.text_field :body,placeholder: 'type a message', class:'message-text-field'
       =f.submit class: "send-button", value: "Send", name: "commit"
       %i.fa.fa-picture-o
