--- a/app/views/groups/_group.html.haml
+++ b/app/views/groups/_group.html.haml
@@ -1,5 +1,5 @@
 .menu__chat-groups
   %h2
     = group.name
-  = link_to '', group_messages_path(group)
+  = link_to group_messages_path(group)
   %p messages
