--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -13,7 +13,7 @@
         =f.label :チャットメンバーを追加, for: "chat_group_チャットメンバーを追加", class: "chat-group-form__label"
       .chat-group-form__field--right
         .chat-group-form__search
-          =f.text_field :name, name: "chat_group[name]", placeholder: "追加したいユーザー名を入力してください", type: "text", id: "chat_group_member", class: "chat-group-form__input"
+          %input{placeholder: "追加したいユーザー名を入力してください", type: "text", id: "chat_group_member", class: "chat-group-form__input"}
         #user-search-result
     .chat-group-form__field
       .chat-group-form__field--left
@@ -23,6 +23,9 @@
           #chat-group-user-22.chat-group-user
             %p.chat-group-user__name
               =current_user.name
+            %ul{class: "users_id"}
+              %li
+              =f.hidden_field :user_ids, :value =>'', id: 'hiddenID'
     .chat-group-form__field
       .chat-group-form__field--left
       .chat-group-form__field--right
