Add user_name in group's detail

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -14,7 +14,9 @@
       = @group.name
     = link_to 'Edit', class: "edit-button"
     %p
-      Members : naya
+      Members :
+      -@users.each do |user|
+        =user.name
 
   .chat-view__history
     = render @messages
