Fixed incremental search

--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -14,8 +14,7 @@
         =f.label :チャットメンバーを追加, for: "chat_group_チャットメンバーを追加", class: "chat-group-form__label"
       .chat-group-form__field--right
         .chat-group-form__search
-          = collection_check_boxes(:group,:user_ids, User.all, :id, :name, include_hidden: false) do |b|
-            = b.label { b.check_box + b.text }
+          %input{placeholder: "追加したいユーザー名を入力してください", type: "text", id: "chat_group_member", class: "chat-group-form__input"}
         #user-search-result
     .chat-group-form__field
       .chat-group-form__field--left
@@ -23,4 +22,16 @@
     .chat-group-form__field
       .chat-group-form__field--left
       .chat-group-form__field--right
-        =f.submit class: "chat-group-form__action-btn", data:{ disable: { with: "Save"} }, name: "commit", value: "Save"
+        #chat-group-users
+          #chat-group-user-22.chat-group-user.chat-group-user__name
+            = current_user.name
+          %p.chat-group-user
+            %ul.users_id
+              - @group.users.each do|member|
+                %li.chat-group-user.chat-group-user__name
+                  =member.name
+                  %p.chat-group-user__btn.chat-group-user__btn--add
+                    削除
+              =f.hidden_field :user_ids, :value =>'', id: 'hiddenID'
+    .chat-group-form__field
+      =f.submit class: "chat-group-form__action-btn", data:{ disable: { with: "Save"} }, name: "commit", value: "Save"
