--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -12,7 +12,7 @@
   .chat-view__group-details
     %h2
       = @group.name
-    = link_to 'Edit', class: "edit-button"
+    = link_to 'Edit',edit_group_path(id: @group.id), class: "edit-button"
     %p
       Members :
       -@users.each do |user|
