--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -16,22 +16,20 @@
         .chat-group-form__search
           %input{placeholder: "追加したいユーザー名を入力してください", type: "text", id: "chat_group_member", class: "chat-group-form__input"}
         #user-search-result
+        #user-search-result
     .chat-group-form__field
       .chat-group-form__field--left
         =f.label :チャットメンバー, for: "chat_group_チャットメンバー", class: "chat-group-form__label"
+      .chat-group-form__field--right
+        #chat-group-users
+        -@group.users.each do|user|
+          #chat-group-user-22.chat-group-user
+            %p.chat-group-user__name
+              =user.name
+              %p.chat-group-user__btn.chat-group-user__btn--remove{data:{user:{id: "#{user.id}"}}}
+                削除
+        =f.hidden_field :user_ids, id: 'hiddenID', value: @group.users.ids , data:{ids: @group.users.ids}
     .chat-group-form__field
       .chat-group-form__field--left
       .chat-group-form__field--right
-        #chat-group-users
-          #chat-group-user-22.chat-group-user.chat-group-user__name
-            = current_user.name
-          %p.chat-group-user
-            %ul.users_id
-              - @group.users.each do|member|
-                %li.chat-group-user.chat-group-user__name
-                  =member.name
-                  %p.chat-group-user__btn.chat-group-user__btn--add
-                    削除
-              =f.hidden_field :user_ids, :value =>'', id: 'hiddenID'
-    .chat-group-form__field
-      =f.submit class: "chat-group-form__action-btn", data:{ disable: { with: "Save"} }, name: "commit", value: "Save"
+        =f.submit class: "chat-group-form__action-btn", data:{ disable: { with: "Save"} }, name: "commit", value: "Save"
