Modified stylesheets names

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,8 +2,9 @@
 @import "font-awesome";
 @import "group";
 @import "./clearfix";
-@import "./user";
+@import "./users";
 @import "./group";
+@import "./messages";
 
 html, body{
   /*overflow: hidden;*/
