Create function to send image via json

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -113,6 +113,11 @@ header{
       padding-top: 10px;
       padding-bottom: 40px;
     }
+    img{
+      clear: both;
+      padding-top: 10px;
+      padding-bottom: 40px;
+    }
   }
 }
 
