--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -24,5 +24,5 @@
     = form_for ([@group, @message]) do|f|
       =f.text_field :body, placeholder: 'type a message', class:'message-text-field'
       =f.submit class: "send-button", value: "Send"
-      %i.fa.fa-picture-o
+      %i.fa.fa-picture-o#image_icon
       = f.file_field :image, id: "message_image"
