--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -5,4 +5,4 @@
     = message.created_at.to_s(:default)
   %h4
     = message.body
-    = image_tag message.image
+    = image_tag message.image.to_s
